[ feat ] 新增 查詢最近瀏覽看板功能
